--- a/package.json
+++ b/package.json
@@ -40,13 +40,15 @@
         "@types/greasemonkey": "^4.0.2",
         "@types/jquery": "^3.5.14",
         "@types/mocha": "^9.1.1",
-        "@types/tampermonkey": "^4.0.5",
         "@types/node": "^17.0.30",
+        "@types/tampermonkey": "^4.0.5",
         "@typescript-eslint/eslint-plugin": "^5.21.0",
         "@typescript-eslint/parser": "^5.21.0",
         "@userscripters/generate-headers": "^2.12.0",
         "@userscripters/generate-readme": "^2.3.1",
+        "@userscripters/stackexchange-api-types": "^3.4.0",
         "@userscripters/stackexchange-global-types": "^2.4.1",
+        "@userscripters/storage": "^0.1.2",
         "chai": "^4.3.6",
         "chai-as-promised": "^7.1.1",
         "eslint": "^8.14.0",
